--- a/roles/nginx/templates/nginx.conf.j2
+++ b/roles/nginx/templates/nginx.conf.j2
@@ -3,6 +3,7 @@ user  {{ nginx_user }};
 error_log  {{ nginx_error_log }};
 pid        {{ nginx_pidfile }};
 
+
 {% block worker %}
 worker_processes  {{ nginx_worker_processes }};
 {% endblock %}
@@ -56,19 +57,21 @@ http {
 
 {% block http_upstream %}
 {% for upstream in nginx_upstreams %}
-    upstream {{ upstream.name }} {
+    upstream myapp1 {
 {% if upstream.strategy is defined %}
         {{ upstream.strategy }};
 {% endif %}
 {% for server in upstream.servers %}
-        server {{ server }};
+        server 172.31.25.134;
+        server 172.31.18.155;
 {% endfor %}
 {% if upstream.keepalive is defined %}
-        keepalive {{ upstream.keepalive }};
+        keepalive 16;
 {% endif %}
     }
 {% endfor %}
 {% endblock %}
+
 
 {% block http_includes %}
     include {{ nginx_conf_path }}/*.conf;
